--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>{{#if title }}{{title}}(星客万维){{else}}星客万维{{/if}}</title>
+  <title>{{#if title }}{{title}}(流量充值){{else}}流量充值{{/if}}</title>
   {{{css "main"}}}
 </head>
 <body>
