--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,4 @@
+/*= require  bootstrap/dist/css/bootstrap.min.css */
 /*= require  weui/dist/style/weui.min.css */
 /*= require  css/reset.css */
 /*= require  css/style.css */
