--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -14,3 +14,10 @@ table{border-collapse: collapse; border-spacing: 0;}
 .clear{clear:both;}
 .clear-l{clear:left;}
 .clear-r{clear:right;}
+a {
+    color: inherit;
+}
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
