--- a/views/yiweixin/orders/extractflow.handlebars
+++ b/views/yiweixin/orders/extractflow.handlebars
@@ -1,4 +1,4 @@
-﻿<div class="box">
+<div class="box">
   <p class="p1">广东移动流量充值</p>
   <form class="forms">
     <div class="forms-i">
@@ -10,12 +10,22 @@
     </div>
     <div class="subimts"><a>充值</a></div>
     <div class="careful">
-      <h3>注意事项：</h3>
-      <p>1，【流量类型】：广东省内通用网络流量，不分时段。</p>
-      <p>2，【注意事项】：广东移动50M、100M、200M属于省内流量红包产品，有效期为20天。</p>
-      <p>3，【到账时间】：即时到帐，务必填写正确手机号码。</p>
-      <p>4，【失败退款】：系统自动退款，见微信退款通知。</p>
-      <p>5，【特殊情况】：不支持无限宽带，时长计费用户。</p>
+      <h3>广东移动省内通用的注意事项为：</h3>
+      <p>
+      1，【流量类型】：广东移动省内通用流量，限广东移动号码充值。<br>
+      2，【注意事项】：限广东移动号码充值，限广东省内使用，有限期20天（月租、月底不清零）<br>
+      3，【到账时间】：即时到账，务必填写正确手机号码。<br>
+      4，【失败退款】：系统自动退款，见微信退款通知。<br>
+      5，【特殊情况】：欠费号码不能充值，充值前请确保号码正常使用，非广东移动号码不能充值。<br>
+      </p>
+      <h3>广东移动国内通用的注意事项为：</h3>
+      <p>
+      1，【流量类型】：广东移动国内通用流量，限广东移动号码充值。<br>
+      2，【注意事项】：限广东移动号码充值，可在国内使用，有限期至当月月底（月租不清零）<br>
+      3，【到账时间】：即时到账，务必填写正确手机号码。<br>
+      4，【失败退款】：系统自动退款，见微信退款通知。<br>
+      5，【特殊情况】：欠费号码不能充值，充值前请确保号码正常使用，非广东移动号码不能充值。<br>
+      </p>
     </div>
   </div>
 </div>
