--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -21,3 +21,10 @@ a {
    padding: 0 !important;
    margin: 0 !important;
 }
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #A9A9A9;
+    cursor: default;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+}
