fix phone number

--- a/views/yiweixin/orders/extractflow.handlebars
+++ b/views/yiweixin/orders/extractflow.handlebars
@@ -29,6 +29,11 @@
     </div>
   </div>
 </div>
+{{#iflt 190 customer.id }}
+  <a href="http://dwz.cn/341ioz">
+    <img class="app-guide1" src="/images/my-logo.png">
+  </a>
+{{/iflt}}
 {{> alertmodal }}
 {{> extractConfirm }}
 {{> loading }}
