--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,5 +30,16 @@ body {
 .careful{ margin-top: 10px;}
 .careful h3, .careful p{ color: #6e6e6e; font-family: "宋体"; line-height: 180%; font-weight: 100;}
 
-
+.app-guide1 {
+position: fixed;
+bottom: 0px;
+left: 0;
+right: 0;
+width: 100%;
+max-width: 650px;
+margin: 0 auto;
+background-color: rgba(0,0,0,0);
+/* box-shadow: 0 -1px 1px rgba(0,0,0,.10); */
+z-index: 99999999999999999;
+}
 
