--- a/views/layouts/sign.handlebars
+++ b/views/layouts/sign.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>星客万维</title>
+  <title>冲浪吧 admin</title>
   {{{css "admin"}}}
 </head>
 <body>
